[package]
name = "deno-runtime-test"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_fs = "0.84.0"
deno_core = "0.323.0"
deno_runtime_ext = { version = "0.1.0" }
anyhow = "1"
tokio = { version = "1.41.0", features = ["full"] }
ureq = "2.10.1"
deno_ast = { version = "0.43.1", features = ["transpiling"] }
colored = "2.1.0"

[build-dependencies]
deno_runtime_ext = { version = "0.1.0" }
deno_core = "0.323.0"
